changing the toc.yml file so that it includes the Weather API documentation

--- a/Quick-Start/toc.yml
+++ b/Quick-Start/toc.yml
@@ -2,3 +2,5 @@
   href: introduction.md
 - name: Getting Started
   href: getting-started.md
+- name: Weather API Documentation
+  href: api/toc.yml
